fix spacing issue index.html 3

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,7 @@ body {
     border-radius: 10px;
     box-shadow: 7px 7px 30px #000;
     text-align: center;
-    margin-top: 115%;
+    margin-top: 100%;
 }
 
 .button {
